--- a/src/02_model_prototype.ipynb
+++ b/src/02_model_prototype.ipynb
@@ -14,15 +14,10 @@
     "from sklearn.preprocessing import LabelEncoder, StandardScaler\n",
     "from sklearn.metrics import accuracy_score, roc_auc_score\n",
     "import joblib\n",
-    "\n",
-    "# For handling imbalance\n",
     "from collections import Counter\n",
     "from imblearn.over_sampling import SMOTE\n",
     "import matplotlib.pyplot as plt\n",
-    "\n",
-    "# %% \n",
-    "# Custom modules\n",
-    "from model_builder import train_model\n",
+    "from model_builder import train_model, get_model\n",
     "from feature_engineering import engineer_features"
    ]
   },
@@ -93,7 +88,7 @@
     }
    ],
    "source": [
-    "# %% Class imbalance before\n",
+    "# Class imbalance before\n",
     "print(\"\\nClass distribution BEFORE balancing:\")\n",
     "print(df_cleaned['Churn'].value_counts(normalize=True))\n",
     "plt.figure(figsize=(5,4))\n",
@@ -118,7 +113,7 @@
      "text": [
       "Engineering features\n",
       "Engineered data: (7032, 30)\n",
-      "[✓] Saved engineered data to: c:\\Users\\renit\\Desktop\\customer-churn-case-study\\data\\processed\\engineered_customer_churn.csv\n"
+      "Saved engineered data to: c:\\Users\\renit\\Desktop\\customer-churn-case-study\\data\\processed\\engineered_customer_churn.csv\n"
      ]
     }
    ],
@@ -127,7 +122,7 @@
     "print(f\"Engineered data: {df_engineered.shape}\")\n",
     "\n",
     "df_engineered.to_csv(ENGINEERED_PATH, index=False)\n",
-    "print(f\"[✓] Saved engineered data to: {ENGINEERED_PATH}\")"
+    "print(f\"Saved engineered data to: {ENGINEERED_PATH}\")"
    ]
   },
   {
@@ -193,7 +188,7 @@
     }
    ],
    "source": [
-    "# %% Balance with SMOTE\n",
+    "# Balance with SMOTE\n",
     "print(\"\\nHandling class imbalance with SMOTE...\")\n",
     "print(f\"Original class distribution: {Counter(y)}\")\n",
     "smote = SMOTE(random_state=42)\n",
@@ -248,7 +243,7 @@
     }
    ],
    "source": [
-    "# %% Split & Scale\n",
+    "# Split & Scale\n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "    X_resampled, y_resampled, test_size=0.2, stratify=y_resampled, random_state=42\n",
     ")\n",
@@ -267,7 +262,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# %% Config\n",
+    "# Config\n",
     "model_types = [\"logreg\", \"rf\", \"xgb\"]\n",
     "ENABLE_HYPERPARAM_TUNING = True"
    ]
@@ -275,29 +270,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "58a27faf",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# %% get_model helper (NEW)\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from xgboost import XGBClassifier\n",
-    "\n",
-    "def get_model(model_type):\n",
-    "    if model_type == \"logreg\":\n",
-    "        return LogisticRegression(max_iter=1000)\n",
-    "    elif model_type == \"rf\":\n",
-    "        return RandomForestClassifier(random_state=42)\n",
-    "    elif model_type == \"xgb\":\n",
-    "        return XGBClassifier(use_label_encoder=False, eval_metric=\"logloss\", random_state=42)\n",
-    "    else:\n",
-    "        raise ValueError(f\"Unknown model type: {model_type}\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
    "id": "752aa1e6",
    "metadata": {},
    "outputs": [],
@@ -327,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "78929e91",
    "metadata": {},
    "outputs": [
@@ -359,16 +331,6 @@
       "ROC-AUC: 0.9213\n",
       "[✓] Saved predictions to: c:\\Users\\renit\\Desktop\\customer-churn-case-study\\data\\processed\\predictions\\predicted_xgb.csv\n",
       "[✓] Saved feature importances to: c:\\Users\\renit\\Desktop\\customer-churn-case-study\\data\\processed\\feature_importance\\importance_xgb.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\renit\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\xgboost\\training.py:183: UserWarning: [21:16:50] WARNING: C:\\actions-runner\\_work\\xgboost\\xgboost\\src\\learner.cc:738: \n",
-      "Parameters: { \"use_label_encoder\" } are not used.\n",
-      "\n",
-      "  bst.update(dtrain, iteration=i, fobj=obj)\n"
      ]
     }
    ],
@@ -430,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "dc659728",
    "metadata": {},
    "outputs": [
