"Removed Extra Spaces"

--- a/src/03_model_evaluation.ipynb
+++ b/src/03_model_evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "dc224fc8",
    "metadata": {},
    "outputs": [],
@@ -11,14 +11,7 @@
     "import pandas as pd\n",
     "import json\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.metrics import (\n",
-    "    classification_report,\n",
-    "    confusion_matrix,\n",
-    "    roc_auc_score,\n",
-    "    roc_curve\n",
-    ")\n",
-    "\n",
-    "# Custom utils\n",
+    "from sklearn.metrics import (classification_report,confusion_matrix,roc_auc_score,roc_curve)\n",
     "from custom_metrics import compute_metrics, save_metrics\n",
     "from visual_eval import plot_confusion_matrix, plot_roc_curve"
    ]
@@ -40,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "e3dbb1e0",
    "metadata": {},
    "outputs": [
@@ -87,24 +80,22 @@
    ],
    "source": [
     "model_types = [\"logreg\", \"rf\", \"xgb\"]\n",
-    "\n",
-    "# %% Evaluation results placeholder\n",
+    "#Evaluation results placeholder\n",
     "model_metrics = {}\n",
     "roc_curves = {}\n",
-    "\n",
-    "# %% Evaluate each model\n",
+    "# Evaluate each model\n",
     "for model_name in model_types:\n",
     "    pred_path = os.path.join(PREDICTIONS_DIR, f\"predicted_{model_name}.csv\")\n",
     "    \n",
     "    if not os.path.exists(pred_path):\n",
-    "        print(f\"[!] Prediction file missing for model: {model_name}\")\n",
+    "        print(f\"Prediction file missing for model: {model_name}\")\n",
     "        continue\n",
     "\n",
     "    print(f\"\\n--- Evaluating Model: {model_name.upper()} ---\")\n",
     "    df = pd.read_csv(pred_path)\n",
     "\n",
     "    assert {\"Churn\", \"predicted\", \"predicted_prob\"}.issubset(df.columns), \\\n",
-    "        f\"[!] Missing prediction columns for {model_name}\"\n",
+    "        f\"Missing prediction columns for {model_name}\"\n",
     "\n",
     "    y_true = df[\"Churn\"]\n",
     "    y_pred = df[\"predicted\"]\n",
@@ -177,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f048f662",
    "metadata": {},
    "outputs": [
@@ -210,7 +201,7 @@
    "source": [
     "# %% Identify best model by ROC-AUC\n",
     "best_model = max(model_metrics, key=lambda x: model_metrics[x][\"roc_auc\"])\n",
-    "print(f\"\\n[✓] Best model by ROC-AUC: {best_model.upper()}\")\n",
+    "print(f\"\\nBest model by ROC-AUC: {best_model.upper()}\")\n",
     "\n",
     "# %% Confusion Matrix of best model\n",
     "df_best = pd.read_csv(os.path.join(PREDICTIONS_DIR, f\"predicted_{best_model}.csv\"))\n",
@@ -223,7 +214,7 @@
     "}\n",
     "with open(os.path.join(METRICS_DIR, \"model_summary.json\"), \"w\") as f:\n",
     "    json.dump(summary, f, indent=2)\n",
-    "print(f\"[✓] Saved model summary to model_summary.json\")"
+    "print(f\"Saved model summary to model_summary.json\")"
    ]
   }
  ],
